--- a/kostagram-project/src/main/webapp/assets/css/main.css
+++ b/kostagram-project/src/main/webapp/assets/css/main.css
@@ -25,17 +25,48 @@ section, summary, time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;}
 
+#profile_img{
+   border-radius: 70%;
+   width : 50px;
+   height : 50px;
+}
+
+#profile_img2{
+   border-radius: 70%;
+   width : 200px;
+   height : 200px;
+}
+
+#profile_name{
+   margin-left: 17px;
+   font-size: 17px;
+}
+
+#main_profile{
+   border: none;
+}
+
+.menu_sticky{
+   display: inline-block;
+     position: sticky;
+     top: 30px;
+     width: 300px;
+}
+
+#main_font{
+   font-family: sans-serif;
+}
+
 .test {
 	margin:0 auto;
 	text-align:center;	
 }
 .btn-test {
-	background-color: #59b1eb;
-	border: 5px solid #59b1eb;
+	background-color: skyblue;
+	border: 5px solid skyblue;
 	color: black;
 	line-height: 30px;
 	border-radius: 4px;
-	
 }
 .btn-test:hover {
 	background-color: #59b1eb;
@@ -68,19 +99,19 @@ blockquote, q {
 		content: none;
 	}
 
-table {
+/* table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}
+} */
 
 body {
 	-webkit-text-size-adjust: none;
 }
 
-mark {
+/* mark {
 	background-color: transparent;
 	color: inherit;
-}
+} */
 
 /* input::-moz-focus-inner {
 	border: 0;
@@ -2394,7 +2425,7 @@ mark {
 
 /* Table */
 
-	.table-wrapper {
+	/* .table-wrapper {
 		-webkit-overflow-scrolling: touch;
 		overflow-x: auto;
 	}
@@ -2458,7 +2489,7 @@ mark {
 			table.alt tfoot {
 				border-top: 0;
 			}
-
+ */
 /* Button */
 
 	/* input[type="submit"],
@@ -2607,7 +2638,7 @@ mark {
 			-ms-transition: -ms-transform 0.5s ease, opacity 0.5s ease;
 			transition: transform 0.5s ease, opacity 0.5s ease;
 			position: relative;
-			width: calc(70% - 2.5em);
+			width: calc(30% - 2.5em);
 			margin: 2.5em 0 0 2.5em;
 		}
 
@@ -2669,7 +2700,7 @@ mark {
 					z-index: 2;
 				}
 
-			.tiles article > a {
+			/* .tiles article > a {
 				display: -moz-flex;
 				display: -webkit-flex;
 				display: -ms-flex;
@@ -2731,7 +2762,7 @@ mark {
 					.tiles article > a .content > :last-child {
 						margin-bottom: 0;
 					}
-			/*
+ */			/*
 			백그라운드 색상
 			
 			.tiles article.style1 > .image:before {
@@ -2865,7 +2896,7 @@ mark {
 	#header {
 		padding: 10px 30px;
 		margin: 10px;
-		background-color: white;
+		background-color: f5f6f7;
 	}
 
 		#header .logo {
@@ -3200,7 +3231,7 @@ mark {
 
 /* Footer */
 
-	#footer {
+/* 	#footer {
 		padding: 5em 0 6em 0 ;
 		background-color: #f6f6f6;
 	}
@@ -3346,7 +3377,7 @@ mark {
 					}
 
 		}
-
+ */
 /* Wrapper */
 
 	#wrapper > * > .inner {
@@ -3363,3 +3394,16 @@ mark {
 			}
 
 		}
+		
+.input-wrap{
+	width: 465px;
+	height:48px;
+	border: solid 1px;
+	background: white;
+}
+.input-section-wrap{
+	padding-top: 60px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
