2차 기능 구현

--- a/kostagram-project/src/main/webapp/assets/css/main.css
+++ b/kostagram-project/src/main/webapp/assets/css/main.css
@@ -31,6 +31,11 @@ section, summary, time, mark, audio, video {
    height : 50px;
 }
 
+#content_img{
+   width : 580px;
+   height : 550px;
+}
+
 #profile_img2{
    border-radius: 70%;
    width : 200px;
